--- a/APIVentas/appsettings.json
+++ b/APIVentas/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=APIVentas-test;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=APIVentas-test;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=9.0.1.213;Database=API_test;user Id=sa;password=aaa;MultipleActiveResultSets=true;Encrypt=false"
+
   }
 }
